# libnixASTTraverse

./: .clang-tidy  default.nix  meson.build  shell.nix
include/: Displacement.h  Serialize.h
lib/: Displacement.cpp  Name.cpp  ParentMap.cpp  Serialize.cpp  meson.build
tools/: meson.build
tools/nix-ast-dump/: meson.build  nix-ast-dump.cpp
tools/nix-serialize/: meson.build  nix-serialize.cpp
